uppercase names avoided to be counted twice

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="row">
       <h1>greeting</h1>
     </div>
-    <div class="">
+    <div class="row">
       <span class="label-body" >Name</span>
       <input type="text" name="" value="" placeholder="enter a name " class="theName">
     </div>
-    <div class="">
+    <div class="row">
       <input type="radio" name="language" class="language" value="english">
       <span class="label-body" >english</span>
       <input type="radio" name="language" class="language" value="afrikaans">
@@ -24,11 +24,13 @@
       <span class="label-body" >xhosa</span>
 
     </div>
+    <div>
       <h3>Counter: <span class="numberOfGreetings" >0</span></h3>
       <button class="button-primary greetMeBtn" on type="button" name="button">Greetme</button>
+      <button class="button-primary resetBtn" on type="button" name="button">Reset</button>
     </div>
 
-    <div class="printHere">
+    <div class="row printHere">
       <p></p>
     </div>
     <script src="js/greeting.js" charset="utf-8"></script>
