greetings dom modified

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     </div>
     <div class="row">
       <span class="label-body" >Name</span>
-      <input type="text" name="" value="" placeholder="enter a name " class="theName">
+      <input type="text" name="" value="" placeholder="enter a name " class="theName" id="theName">
     </div>
     <div class="row">
       <input type="radio" name="language" class="language" value="english">
-      <span class="label-body" >english</span>
+      <span class="label-body" >English</span>
       <input type="radio" name="language" class="language" value="afrikaans">
-      <span class="label-body" >afrikaans</span>
+      <span class="label-body" >Afrikaans</span>
       <input type="radio" name="language" class="language" value="xhosa">
-      <span class="label-body" >xhosa</span>
+      <span class="label-body" >IsiXhosa</span>
 
     </div>
     <div>
