--- a/index.html
+++ b/index.html
@@ -8,31 +8,34 @@
     <meta name="viewport" content="width=device-width" />
   </head>
   <body>
-    <div class="row">
-      <h1>greeting</h1>
-    </div>
-    <div class="row">
-      <span class="label-body" >Name</span>
-      <input type="text" name="" value="" placeholder="enter a name " class="theName" id="theName">
-    </div>
-    <div class="row">
-      <input type="radio" name="language" class="language" value="english">
-      <span class="label-body" >English</span>
-      <input type="radio" name="language" class="language" value="afrikaans">
-      <span class="label-body" >Afrikaans</span>
-      <input type="radio" name="language" class="language" value="xhosa">
-      <span class="label-body" >IsiXhosa</span>
+    <div class="container">
+      <div class="row">
+        <h1>Greetings</h1>
+      </div>
+      <div class="row">
+        <span class="label-body" >Name</span>
+        <input type="text" name="" value="" placeholder="enter a name " class="theName" id="theName">
+      </div>
+      <div class="row">
+        <input type="radio" name="language" class="language" value="English">
+        <span class="label-body" >English</span>
+        <input type="radio" name="language" class="language" value="Afrikaans">
+        <span class="label-body" >Afrikaans</span>
+        <input type="radio" name="language" class="language" value="IsiXhosa">
+        <span class="label-body" >IsiXhosa</span>
 
-    </div>
-    <div>
-      <h3>Counter: <span class="numberOfGreetings" >0</span></h3>
-      <button class="button-primary greetMeBtn" on type="button" name="button">Greetme</button>
-      <button class="button-primary resetBtn" on type="button" name="button">Reset</button>
+      </div>
+      <div class="row">
+        <h3>Counter: <span class="numberOfGreetings" >0</span></h3>
+        <button class="button-primary greetMeBtn" on type="button" name="button">Greetme</button>
+        <button class="button-primary resetBtn" on type="button" name="button">Reset</button>
+      </div>
+
+      <div class="row printHere">
+        <p></p>
+      </div>
     </div>
 
-    <div class="row printHere">
-      <p></p>
-    </div>
     <script src="js/greeting.js" charset="utf-8"></script>
     <script src="js/greeting-dom.js" charset="utf-8"></script>
 
